# videodl

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.prod.yaml  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml  refresh-ytdlp.yml
app/: config.py  jobs.py  main.py  media.py
app/static/: app.css  sse.js
app/templates/: _job.html  _tile.html  index.html
docs/: videodl-plan.md
